<resources>
    <string name="app_name">Neighbourhood</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="text_register">Not a user? Register here!</string>
    <string name="action_register">Register</string>
    <string name="register_with_google">Register With Google</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_my_profile">My Profile</string>
    <string name="menu_map">Map</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_people">People</string>
    <string name="menu_events">Events</string>
    <string name="menu_diary">Diary</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_remove_account">Remove Account</string>
    <string name="menu_places">Places</string>

    <string name="action_about">About Mind</string>
    <string name="action_info_helpline">Info Helpline</string>
    <string name="action_legal_helpline">Legal Helpline</string>

    <string name="title_activity_maps">Map</string>
    <string name="dialog_confirm_account_delete_description">To confirm deletion of your account, please enter your password.</string>
    <string name="dialog_confirm_account_delete_title">Confirm delete</string>
    <string name="lblDOB">Date of Birth:</string>
    <string name="cmdChooseDOB">Choose DOB</string>
    <string name="lblName">Name:</string>
    <string name="lblAddress">Address:</string>
    <string name="change_profile_picture">Change Profile Picture</string>

    <string-array name="ethnicities">
        <item>Choose Ethnicity</item>
        <item>British</item>
        <item>African</item>
        <item>Arab</item>
        <item>Bangladeshi</item>
        <item>Caribbean</item>
        <item>Chinese</item>
        <item>Indian</item>
        <item>Irish</item>
        <item>Pakistani</item>
        <item>Traveller/Irish Traveller</item>
        <item>White and Asian</item>
        <item>White and Black African</item>
        <item>White and Black Caribbean</item>
    </string-array>
</resources>
