<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_heart_black_24dp"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_people" />
        <item
            android:id="@+id/nav_places"
            android:icon="@drawable/ic_location_black_24dp"
            android:title="@string/menu_places" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/ic_diary_black_24dp"
            android:title="@string/menu_diary" />

        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_my_profile" />
    </group>

    <item android:title="Settings">
        <menu>
             <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_sign_out_black_24dp"
                android:title="@string/menu_sign_out" />

            <item
                android:id="@+id/nav_remove_account"
                android:icon="@drawable/ic_remove_account_black_24dp"
                android:title="@string/menu_remove_account" />
        </menu>
    </item>

</menu>
